<resources>
  <string name="app_name">Sign</string>
  <string name="ic_application">应用图标</string>
  <string name="application_name">签到吧</string>
  <string name="message">消息</string>
  <string name="hint_for_search_box">搜索事件</string>
  <string name="search">搜索</string>
  <string name="activity">活动</string>
  <string name="course">课程</string>
  <string name="personal">个人</string>
  <string name="date">时间:</string>
  <string name="location">地点:</string>
  <string name="content">内容:</string>
  <string name="sign">签到</string>
  <string name="head">头像</string>
  <string name="my_message">我的消息</string>
  <string name="statics">统计</string>
  <string name="feedback">问题反馈</string>
  <string name="about_us">关于我们</string>
  <string name="arrow">箭头</string>
  <string name="monday">周一</string>
  <string name="tuesday">周二</string>
  <string name="wednesday">周三</string>
  <string name="friday">周五</string>
  <string name="saturday">周六</string>
  <string name="sunday">周日</string>
  <string name="thursday">周四</string>
</resources>
