<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:background="@color/background_blue">

  <TextView
    android:id="@+id/item_1"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="0.5"
    android:gravity="center"
    android:background="@color/background_blue"
    android:text="单"/>

  <TextView
    android:id="@+id/item_2"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/monday"/>

  <TextView
    android:id="@+id/item_3"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/tuesday"/>

  <TextView
    android:id="@+id/item_4"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/wednesday"/>

  <TextView
    android:id="@+id/item_5"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/thursday"/>

  <TextView
    android:id="@+id/item_6"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/friday"/>

  <TextView
    android:id="@+id/item_7"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/saturday"/>

  <TextView
    android:id="@+id/item_8"
    style="@style/course_list_tile"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/sunday"/>
</LinearLayout>