<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/qmui_config_color_background">
  <android.support.v7.widget.CardView
    android:layout_marginTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:scaleX="0.8"
      android:scaleY="0.8">

      <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:contentDescription="@string/head"
        android:src="@mipmap/ic_personal"
        android:background="@color/colorPrimary"/>

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:textSize="16sp"
        android:layout_marginLeft="30dp"
        android:gravity="start"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:text="小明同学"/>
    </LinearLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/my_message"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:drawableLeft="@mipmap/ic_message_primary"
        android:drawableStart="@mipmap/ic_message_primary"
        android:drawablePadding="30dp"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/statics"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_statics"
        android:drawableStart="@mipmap/ic_statics"
        android:drawablePadding="30dp"
        android:textSize="16sp"
        android:scaleX="0.8"
        android:scaleY="0.8"/>

    </LinearLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/feedback"
        android:drawableLeft="@mipmap/ic_feedback"
        android:drawableStart="@mipmap/ic_feedback"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:scaleX="0.8"
        android:scaleY="0.8"/>

      <TextView
        android:layout_width="match_parent"
        android:text="@string/about_us"
        android:drawableLeft="@mipmap/ic_info"
        android:drawableStart="@mipmap/ic_info"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:scaleX="0.8"
        android:scaleY="0.8"/>

    </LinearLayout>

  </android.support.v7.widget.CardView>

</LinearLayout>